Fix #6447 - The filter table columns shouldn't be used to divide the "Search/Filters" row at the bottom of the table.  Improve layout and styling for filter.  Floating elements were breaking out of the box. Now the box grows to contain elements floating on new lines.

--- a/css/default.css
+++ b/css/default.css
@@ -276,26 +276,17 @@ td.tainted { color: red; }
 td.tainted input[type="text"], td.tainted select { background-color: #ffffff; color: red; border: 1px solid red; }
 select.tainted { background-color: #ffffff; color: red; }
 
-.stored-queries select { font-size: .9em; }
-#filter_closed_link { float: left; padding: .6em .5em; margin: 0; line-height: 2.25em;}
-#filter_open_link { float: left; padding: 0 .5em; margin: 0; margin-top: -.3em;}
-
-.filter-box { clear: both; border: 1px solid #000; margin: 0; padding: 0; font-size: .9em; }
-#filter_closed .filter-box { height: 2em; }
-
-.filter-box table { margin-bottom: 1em; }
-
+#filter_open, #filter_closed { position: relative; border: 1px solid #000; padding: 0; margin: 0; }
+#filter_open_link, #filter_closed_link { float: left; position: relative; top: 1em; padding: 0 .5em; margin: 0; }
 .search-box { float: left; position: relative; padding: 0; margin: 0; }
-.submit-query{ float: left; position: relative; padding: 0 .5em; margin: 0; }
-.other-forms { float: right; position: relative; padding: 0; margin: 0; }
-.filter-links { float: left; position: relative; padding: 0 .5em; margin: 0; line-height: 2.25em; }
-.stored-queries { float: left; padding: 0 .5em; margin: 0; line-height: 2.25em; z-index: 100; }
-.reset-query { float: left; padding: 0; margin: 0; line-height: 2.25em; }
-.save-query { float: left; padding: 0 .5em; margin: 0; line-height: 2.25em; }
+.search-box, .save-query, .submit-query, .stored-queries, .manage-queries { top: .3em; }
+.submit-query, .save-query {  float: left; position: relative; padding: 0 .5em; margin: 0; font-size: 1em; }
+.filter-links, .stored-queries, .manage-queries, .reset-query { float: right; position: relative; padding: 0 .5em; margin: 0; z-index: 100; }
+.save-query {  float: right; }
 
-#filter_open { position: relative; }
-#filter_open .search-box,
-#filter_open .submit-query { top: -.9em; }
-#filter_open .other-forms { top: -1.1em; }
-
-#filter_closed .other-forms { top: -.15em; }
+.filter-box { margin: 0; padding: 0; font-size: .9em; }
+.filter-box table { margin: 0; padding: 0; }
+.filter-links { padding: .5em; }
+.stored-queries select { font-size: .9em; }
+#error-msg { clear: both; }
+.error-msg { color: red; }
